objects/Tour_Package__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Tour Packages</relationshipLabel>
        <relationshipName>Tour_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination</label>
        <referenceTo>Destination__c</referenceTo>
        <relationshipLabel>Tour Packages</relationshipLabel>
        <relationshipName>Tour_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncludedServices__c</fullName>
        <label>IncludedServices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>NOn</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tour_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Template</label>
        <referenceTo>Tour_Template__c</referenceTo>
        <relationshipLabel>Tour Packages</relationshipLabel>
        <relationshipName>Tour_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tour Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>